# ray-tracing

./: .gitignore  CMakeLists.txt  Makefile  README.md  Shape.cpp  arch.txt  config.cpp  main.cpp  trace.cpp
color/: color.cpp  color.hpp
lighting/: lightEmittor.cpp  lightEmittor.hpp
materials/: material.cpp  material.hpp
scene/: scene.cpp  scene.hpp
shapes/: cube.cpp  cube.hpp  plane.cpp  plane.hpp  polyhedron.cpp  polyhedron.hpp  ray.hpp  shape.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
tracer/: tracer.cpp  tracer.hpp
utils/: utils.cpp  utils.hpp
